@@ -2428,8 +2428,8 @@ End
 
   def test_ioctl_linux2
     return if /linux/ !~ RUBY_PLATFORM
-    return if /^i?86|^x86_64/ !~ RUBY_PLATFORM
-    return if File.exist?('/dev/tty')
+    return if /^i.?86|^x86_64/ !~ RUBY_PLATFORM
+    return unless File.exist?('/dev/tty')
 
     File.open('/dev/tty') { |f|
       tiocgwinsz=0x5413
