@@ -1,3 +1,11 @@
+Fri Oct 12 18:18:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (rb_get_path_check): path name must not contain NUL bytes.
+
+Fri Oct 12 16:06:20 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* tool/merger.rb: now can merge revision(s) without --ticket again.
+
 Fri Oct 12 14:10:41 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (dir_config, init_mkmf): use configured libdir value as
